--- a/templates/add_supermaster.html
+++ b/templates/add_supermaster.html
@@ -1,4 +1,4 @@
-<nav aria-label="breadcrumb">
+<nav aria-label="breadcrumb" data-testid="breadcrumb-nav">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="index.php">{% trans %}Home{% endtrans %}</a></li>
         <li class="breadcrumb-item"><a href="index.php?page=list_supermasters">{% trans %}Supermasters{% endtrans %}</a></li>
@@ -6,24 +6,24 @@
     </ol>
 </nav>
 
-<h5 class="mb-3">{% trans %}Add supermaster{% endtrans %}</h5>
-<form class="needs-validation" method="post" action="index.php?page=add_supermaster" novalidate>
+<h5 class="mb-3" data-testid="add-supermaster-heading">{% trans %}Add supermaster{% endtrans %}</h5>
+<form class="needs-validation" method="post" action="index.php?page=add_supermaster" novalidate data-testid="add-supermaster-form">
     <input type="hidden" name="_token" value="{{ csrf_token }}">
     <div class="col-sm-3">
         <div class="mb-2">
             <label for="master_ip" class="form-label">{% trans %}IP address of supermaster{% endtrans %}</label>
             <input class="form-control form-control-sm" type="text" id="master_ip" name="master_ip" value="{{ master_ip }}"
-                   required>
-            <div class="invalid-feedback">{% trans %}Provide ip address{% endtrans %}</div>
+                   required data-testid="master-ip-input">
+            <div class="invalid-feedback" data-testid="master-ip-error">{% trans %}Provide ip address{% endtrans %}</div>
         </div>
         <div class="mb-2">
             <label for="ns_name" class="form-label">{% trans %}Hostname in NS record{% endtrans %}</label>
-            <input class="form-control form-control-sm" type="text" id="ns_name" name="ns_name" value="{{ ns_name }}" required>
-            <div class="invalid-feedback">{% trans %}Provide host name{% endtrans %}</div>
+            <input class="form-control form-control-sm" type="text" id="ns_name" name="ns_name" value="{{ ns_name }}" required data-testid="ns-name-input">
+            <div class="invalid-feedback" data-testid="ns-name-error">{% trans %}Provide host name{% endtrans %}</div>
         </div>
         <div class="mb-4">
             <label for="account" class="form-label">{% trans %}Account{% endtrans %}</label>
-            <select class="form-select form-select-sm" id="account" name="account">
+            <select class="form-select form-select-sm" id="account" name="account" data-testid="account-select">
                 {% for user in users %}
                 {% if user['id'] == session_uid %}
                 <option value="{{ user['username'] }}" selected>
@@ -46,7 +46,7 @@
             </select>
         </div>
         <div class="mb-2">
-            <input class="btn btn-primary btn-sm" type="submit" name="submit" value="{% trans %}Add supermaster{% endtrans %}">
+            <input class="btn btn-primary btn-sm" type="submit" name="submit" value="{% trans %}Add supermaster{% endtrans %}" data-testid="add-supermaster-submit">
         </div>
     </div>
 </form>
