--- a/templates/add_zone_templ_record.html
+++ b/templates/add_zone_templ_record.html
@@ -1,4 +1,4 @@
-<nav aria-label="breadcrumb">
+<nav aria-label="breadcrumb" data-testid="breadcrumb-nav">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="index.php">{% trans %}Home{% endtrans %}</a></li>
         <li class="breadcrumb-item"><a href="index.php?page=list_zones">{% trans %}Zones{% endtrans %}</a></li>
@@ -8,9 +8,9 @@
     </ol>
 </nav>
 
-<h5 class="mb-3">{% trans %}Add record to zone template{% endtrans %} "{{ templ_name }}"</h5>
+<h5 class="mb-3" data-testid="add-record-heading">{% trans %}Add record to zone template{% endtrans %} "{{ templ_name }}"</h5>
 
-<form class="needs-validation" method="post" novalidate>
+<form class="needs-validation" method="post" novalidate data-testid="add-record-form">
     <input type="hidden" name="_token" value="{{ csrf_token }}">
     <input type="hidden" name="domain" value="{{ zone_templ_id }}">
     <table class="table table-striped table-hover table-sm">
@@ -24,11 +24,11 @@
         </tr>
         <tr>
             <td>
-                <input class="form-control form-control-sm" type="text" name="name" value="{{ name }}" required>
+                <input class="form-control form-control-sm" type="text" name="name" value="{{ name }}" required data-testid="record-name-input">
             </td>
             <td>IN</td>
             <td>
-                <select class="form-select form-select-sm" name="type">
+                <select class="form-select form-select-sm" name="type" data-testid="record-type-select">
                     {% for record_type in record_types %}
                     <option value="{{ record_type }}" {% if record_type == type %}selected{% endif %}>{{ record_type }}
                     </option>
@@ -36,23 +36,23 @@
                 </select>
             </td>
             <td>
-                <input class="form-control form-control-sm" type="text" name="content" value="{{ content }}" required>
+                <input class="form-control form-control-sm" type="text" name="content" value="{{ content }}" required data-testid="record-content-input">
                 <div class="invalid-feedback">{% trans %}Provide content for your zone record{% endtrans %}</div>
             </td>
             <td><input class="form-control form-control-sm" type="number" name="prio" value="{{ prio }}" min="0"
-                       max="65535" pattern="[0-9]*" required></td>
+                       max="65535" pattern="[0-9]*" required data-testid="record-priority-input"></td>
             <td><input class="form-control form-control-sm" type="number" name="ttl" value="{{ ttl }}" min="0"
-                       max="2147483647" pattern="[0-9]*" required></td>
+                       max="2147483647" pattern="[0-9]*" required data-testid="record-ttl-input"></td>
         </tr>
         <tr>
             <td colspan="6">
                 <div><input class="btn btn-primary btn-sm" type="submit" name="commit"
-                            value="{% trans %}Add record{% endtrans %}">
+                            value="{% trans %}Add record{% endtrans %}" data-testid="add-record-submit">
                 </div>
             </td>
         </tr>
     </table>
-    <table>
+    <table data-testid="template-hints">
         <tr>
             <td colspan="6"><b>{% trans %}Hint:{% endtrans %}</b></td>
         </tr>
