--- a/templates/delete_domain.html
+++ b/templates/delete_domain.html
@@ -1,4 +1,4 @@
-<nav aria-label="breadcrumb">
+<nav aria-label="breadcrumb" data-testid="breadcrumb-nav">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="index.php">{% trans %}Home{% endtrans %}</a></li>
         <li class="breadcrumb-item"><a href="index.php?page=list_zones">{% trans %}Zones{% endtrans %}</a></li>
@@ -14,22 +14,24 @@
 </nav>
 
 {% if idn_zone_name %}
-<h5 class="mb-3">{% trans %}Delete zone{% endtrans %} "{{ idn_zone_name }}" ({{ zone_info['name'] }})</h5>
+<h5 class="mb-3" data-testid="delete-zone-heading">{% trans %}Delete zone{% endtrans %} "{{ idn_zone_name }}" ({{ zone_info['name'] }})</h5>
 {% else %}
-<h5 class="mb-3">{% trans %}Delete zone{% endtrans %} "{{ zone_info['name'] }}"</h5>
+<h5 class="mb-3" data-testid="delete-zone-heading">{% trans %}Delete zone{% endtrans %} "{{ zone_info['name'] }}"</h5>
 {% endif %}
 
-{% trans %}Owner{% endtrans %}: {{ zone_owners }}<br>
-{% trans %}Type{% endtrans %}: {{ zone_info['type'] }}
+<div data-testid="zone-info">
+{% trans %}Owner{% endtrans %}: <span data-testid="zone-owners">{{ zone_owners }}</span><br>
+{% trans %}Type{% endtrans %}: <span data-testid="zone-type">{{ zone_info['type'] }}</span>
+</div>
 
 {% if slave_master_exists %}
-<p>
+<p data-testid="supermaster-warning">
     {% trans %}You are about to delete a slave zone of which the master nameserver is a supermaster. Deleting the zone now, will result in temporary removal only. Whenever the supermaster sends a notification for this zone, it will be added again!{% endtrans %}
 </p>
 {% endif %}
 
-<p>{% trans %}Are you sure?{% endtrans %}</p>
-<form method="post" action="index.php?page=delete_domain&id={{ zone_id }}" style="display: inline;">
+<p data-testid="confirmation-message">{% trans %}Are you sure?{% endtrans %}</p>
+<form method="post" action="index.php?page=delete_domain&id={{ zone_id }}" style="display: inline;" data-testid="delete-zone-form">
     <input type="hidden" name="_token" value="{{ csrf_token }}">
     <input type="submit" class="btn btn-primary btn-sm" value="{% trans %}Yes{% endtrans %}" data-testid="confirm-delete-zone">
 </form>
