--- a/templates/delete_record.html
+++ b/templates/delete_record.html
@@ -1,4 +1,4 @@
-<nav aria-label="breadcrumb">
+<nav aria-label="breadcrumb" data-testid="breadcrumb-nav">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="index.php">{% trans %}Home{% endtrans %}</a></li>
         <li class="breadcrumb-item"><a href="index.php?page=list_zones">{% trans %}Zones{% endtrans %}</a></li>
@@ -14,12 +14,12 @@
 </nav>
 
 {% if idn_zone_name %}
-<h5 class="mb-3">{% trans %}Delete record in zone{% endtrans %} "{{ idn_zone_name }}" ({{ zone_name }})</h5>
+<h5 class="mb-3" data-testid="delete-record-heading">{% trans %}Delete record in zone{% endtrans %} "{{ idn_zone_name }}" ({{ zone_name }})</h5>
 {% else %}
-<h5 class="mb-3">{% trans %}Delete record in zone{% endtrans %} "{{ zone_name }}"</h5>
+<h5 class="mb-3" data-testid="delete-record-heading">{% trans %}Delete record in zone{% endtrans %} "{{ zone_name }}"</h5>
 {% endif %}
 
-<table class="table table-striped table-sm">
+<table class="table table-striped table-sm" data-testid="delete-record-table">
     <thead>
     <tr>
         <th>Name</th>
@@ -32,23 +32,23 @@
     </tr>
     </thead>
     <tbody>
-    <tr>
-        <td>{{ record_info['name'] }}</td>
-        <td>{{ record_info['type'] }}</td>
-        <td>{{ record_info['content'] }}</td>
+    <tr data-testid="record-info-row">
+        <td data-testid="record-name">{{ record_info['name'] }}</td>
+        <td data-testid="record-type">{{ record_info['type'] }}</td>
+        <td data-testid="record-content">{{ record_info['content'] }}</td>
         {% if record_info['prio'] %}
-        <td>{{ record_info['prio'] }}</td>
+        <td data-testid="record-priority">{{ record_info['prio'] }}</td>
         {% endif %}
-        <td>{{ record_info['ttl'] }}</td>
+        <td data-testid="record-ttl">{{ record_info['ttl'] }}</td>
     </tr>
     </tbody>
 </table>
 {% if (record_info['type'] == 'NS' and record_info['name'] == zone_name) or record_info['type'] == 'SOA' %}
-<p>{% trans %}You are trying to delete a record that is needed for this zone to work.{% endtrans %}</p>
+<p data-testid="critical-record-warning">{% trans %}You are trying to delete a record that is needed for this zone to work.{% endtrans %}</p>
 {% endif %}
-<p>{% trans %}Are you sure?{% endtrans %}</p>
-<form method="post" action="index.php?page=delete_record&id={{ record_id }}" style="display: inline;">
+<p data-testid="confirmation-message">{% trans %}Are you sure?{% endtrans %}</p>
+<form method="post" action="index.php?page=delete_record&id={{ record_id }}" style="display: inline;" data-testid="delete-record-form">
     <input type="hidden" name="_token" value="{{ csrf_token }}">
-    <input type="submit" class="btn btn-primary btn-sm" value="{% trans %}Yes{% endtrans %}">
+    <input type="submit" class="btn btn-primary btn-sm" value="{% trans %}Yes{% endtrans %}" data-testid="confirm-delete-button">
 </form>
-<input type="button" class="btn btn-secondary btn-sm" onClick="location.href='index.php?page=edit&id={{ zone_id }}'" value="{% trans %}No{% endtrans %}">
+<input type="button" class="btn btn-secondary btn-sm" onClick="location.href='index.php?page=edit&id={{ zone_id }}'" value="{% trans %}No{% endtrans %}" data-testid="cancel-delete-button">
