--- a/templates/delete_supermaster.html
+++ b/templates/delete_supermaster.html
@@ -1,4 +1,4 @@
-<nav aria-label="breadcrumb">
+<nav aria-label="breadcrumb" data-testid="breadcrumb-nav">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="index.php">{% trans %}Home{% endtrans %}</a></li>
         <li class="breadcrumb-item"><a href="index.php?page=list_supermasters">{% trans %}Supermasters{% endtrans %}</a></li>
@@ -6,13 +6,13 @@
     </ol>
 </nav>
 
-<h5 class="mb-3">{% trans %}Delete supermaster{% endtrans %} "{{ master_ip }}"</h5>
-<p>
-    {% trans %}Hostname in NS record{% endtrans %}: {{ info['ns_name'] }}<br>
-    {% trans %}Account{% endtrans %}: {{ info['account'] }}
+<h5 class="mb-3" data-testid="delete-supermaster-heading">{% trans %}Delete supermaster{% endtrans %} "{{ master_ip }}"</h5>
+<p data-testid="supermaster-info">
+    {% trans %}Hostname in NS record{% endtrans %}: <span data-testid="supermaster-ns-name">{{ info['ns_name'] }}</span><br>
+    {% trans %}Account{% endtrans %}: <span data-testid="supermaster-account">{{ info['account'] }}</span>
 </p>
-<p>{% trans %}Are you sure?{% endtrans %}</p>
+<p data-testid="confirmation-message">{% trans %}Are you sure?{% endtrans %}</p>
 <input type="button" class="btn btn-primary btn-sm"
        onClick="location.href='index.php?page=delete_supermaster&master_ip={{ master_ip }}&ns_name={{ info['ns_name'] }}&confirm=1'"
-       value="{% trans %}Yes{% endtrans %}">
-<input type="button" class="btn btn-secondary btn-sm" onClick="location.href='index.php?page=list_supermasters'" value="{% trans %}No{% endtrans %}">
+       value="{% trans %}Yes{% endtrans %}" data-testid="confirm-delete-supermaster">
+<input type="button" class="btn btn-secondary btn-sm" onClick="location.href='index.php?page=list_supermasters'" value="{% trans %}No{% endtrans %}" data-testid="cancel-delete-supermaster">
