--- a/templates/delete_zone_templ_record.html
+++ b/templates/delete_zone_templ_record.html
@@ -1,4 +1,4 @@
-<nav aria-label="breadcrumb">
+<nav aria-label="breadcrumb" data-testid="breadcrumb-nav">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="index.php">{% trans %}Home{% endtrans %}</a></li>
         <li class="breadcrumb-item"><a href="index.php?page=list_zones">{% trans %}Zones{% endtrans %}</a></li>
@@ -8,9 +8,9 @@
     </ol>
 </nav>
 
-<h5 class="mb-3">{% trans %}Delete record in zone template{% endtrans %} "{{ templ_details['name'] }}"</h5>
+<h5 class="mb-3" data-testid="delete-record-heading">{% trans %}Delete record in zone template{% endtrans %} "{{ templ_details['name'] }}"</h5>
 
-<table class="table table-striped table-sm">
+<table class="table table-striped table-sm" data-testid="record-info-table">
     <thead>
     <tr>
         <th>Name</th>
@@ -22,16 +22,16 @@
     </thead>
     <tbody>
     <tr>
-        <td>{{ record_info['name'] }}</td>
-        <td>{{ record_info['type'] }}</td>
-        <td>{{ record_info['content'] }}</td>
-        <td>{{ record_info['prio'] }}</td>
-        <td>{{ record_info['ttl'] }}</td>
+        <td data-testid="record-name">{{ record_info['name'] }}</td>
+        <td data-testid="record-type">{{ record_info['type'] }}</td>
+        <td data-testid="record-content">{{ record_info['content'] }}</td>
+        <td data-testid="record-priority">{{ record_info['prio'] }}</td>
+        <td data-testid="record-ttl">{{ record_info['ttl'] }}</td>
     </tr>
     </tbody>
 </table>
-<p>{% trans %}Are you sure?{% endtrans %}</p>
+<p data-testid="confirmation-message">{% trans %}Are you sure?{% endtrans %}</p>
 <input type="button" class="btn btn-primary btn-sm"
        onClick="location.href='index.php?page=delete_zone_templ_record&id={{ record_id }}&zone_templ_id={{ zone_templ_id }}&confirm=1'"
-       value="{% trans %}Yes{% endtrans %}">
-<input type="button" class="btn btn-secondary btn-sm" onClick="location.href='index.php?page=edit_zone_templ&id={{ zone_templ_id }}'" value="{% trans %}No{% endtrans %}">
+       value="{% trans %}Yes{% endtrans %}" data-testid="confirm-button">
+<input type="button" class="btn btn-secondary btn-sm" onClick="location.href='index.php?page=edit_zone_templ&id={{ zone_templ_id }}'" value="{% trans %}No{% endtrans %}" data-testid="cancel-button">
