--- a/templates/dnssec.html
+++ b/templates/dnssec.html
@@ -1,4 +1,4 @@
-<nav aria-label="breadcrumb">
+<nav aria-label="breadcrumb" data-testid="breadcrumb-nav">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="index.php">{% trans %}Home{% endtrans %}</a></li>
         <li class="breadcrumb-item"><a href="index.php?page=list_zones">{% trans %}Zones{% endtrans %}</a></li>
@@ -14,12 +14,12 @@
 </nav>
 
 {% if idn_zone_name %}
-<h5 class="mb-3">{% trans %}DNSSEC keys for zone{% endtrans %} "{{ idn_zone_name }}" ({{ domain_name }})</h5>
+<h5 class="mb-3" data-testid="dnssec-keys-heading">{% trans %}DNSSEC keys for zone{% endtrans %} "{{ idn_zone_name }}" ({{ domain_name }})</h5>
 {% else %}
-<h5 class="mb-3">{% trans %}DNSSEC keys for zone{% endtrans %} "{{ domain_name }}"</h5>
+<h5 class="mb-3" data-testid="dnssec-keys-heading">{% trans %}DNSSEC keys for zone{% endtrans %} "{{ domain_name }}"</h5>
 {% endif %}
 
-<table class="table table-striped table-hover table-sm">
+<table class="table table-striped table-hover table-sm" data-testid="dnssec-keys-table">
     <tr>
         <th>{% trans %}ID{% endtrans %}</th>
         <th>{% trans %}Type{% endtrans %}</th>
@@ -38,18 +38,18 @@
     {% set button_title = 'Activate zone key' %}
     {% set active = 'No' %}
     {% endif %}
-    <tr>
-        <td>{{ item[0] }}</td>
-        <td>{{ item[1] }}</td>
-        <td>{{ item[2] }}</td>
-        <td>{{ algorithms[item[3]] }}</td>
-        <td>{{ item[4] }}</td>
-        <td>{{ active|trans }}</td>
+    <tr data-testid="dnssec-key-row-{{ item[0] }}">
+        <td data-testid="key-id-{{ item[0] }}">{{ item[0] }}</td>
+        <td data-testid="key-type-{{ item[0] }}">{{ item[1] }}</td>
+        <td data-testid="key-tag-{{ item[0] }}">{{ item[2] }}</td>
+        <td data-testid="key-algorithm-{{ item[0] }}">{{ algorithms[item[3]] }}</td>
+        <td data-testid="key-bits-{{ item[0] }}">{{ item[4] }}</td>
+        <td data-testid="key-active-{{ item[0] }}">{{ active|trans }}</td>
         <td>
             <a class="btn btn-outline-primary btn-sm"
-               href="index.php?page=dnssec_edit_key&id={{ zone_id }}&key_id={{ item[0] }}"><i class="bi bi-pencil-square"></i>
+               href="index.php?page=dnssec_edit_key&id={{ zone_id }}&key_id={{ item[0] }}" data-testid="edit-key-{{ item[0] }}"><i class="bi bi-pencil-square"></i>
                 {{ button_title|trans }}</a>
-            <a class="btn btn-outline-danger btn-sm" href="index.php?page=dnssec_delete_key&id={{ zone_id }}&key_id={{ item[0] }}"><i
+            <a class="btn btn-outline-danger btn-sm" href="index.php?page=dnssec_delete_key&id={{ zone_id }}&key_id={{ item[0] }}" data-testid="delete-key-{{ item[0] }}"><i
                     class="bi bi-trash"></i> {% trans %}Delete zone key{% endtrans %}</a>
         </td>
     </tr>
@@ -57,6 +57,6 @@
 
 </table>
 <input class="btn btn-primary btn-sm" type="button" onClick="location.href='index.php?page=dnssec_add_key&id={{ zone_id }}'"
-       value="{% trans %}Add new key{% endtrans %}">
+       value="{% trans %}Add new key{% endtrans %}" data-testid="add-new-key-button">
 <input class="btn btn-secondary btn-sm" type="button" onClick="location.href='index.php?page=dnssec_ds_dnskey&id={{ zone_id }}'"
-       value="{% trans %}Show DS and DNSKEY{% endtrans %}">
+       value="{% trans %}Show DS and DNSKEY{% endtrans %}" data-testid="show-ds-dnskey-button">
