--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -6,29 +6,29 @@
     </ol>
 </nav>
 
-<h5 class="mb-3">{% trans %}Edit user{% endtrans %} "{{ name }}"</h5>
-<form class="needs-validation" method="post" action="" novalidate>
+<h5 class="mb-3" data-testid="edit-user-heading">{% trans %}Edit user{% endtrans %} "{{ name }}"</h5>
+<form class="needs-validation" method="post" action="" novalidate data-testid="edit-user-form">
     <input type="hidden" name="_token" value="{{ csrf_token }}">
     <input type="hidden" name="number" value="{{ edit_id }}">
     <table>
         <tr>
             <td>{% trans %}Username{% endtrans %}</td>
             <td><input class="form-control form-control-sm" type="text" name="username" value="{{ user['username'] }}"
-                       required>
-                <div class="invalid-feedback">{% trans %}Provide user name{% endtrans %}</div>
+                       required data-testid="username-input">
+                <div class="invalid-feedback" data-testid="username-error">{% trans %}Provide user name{% endtrans %}</div>
             </td>
         </tr>
         <tr>
             <td>{% trans %}Fullname{% endtrans %}</td>
             <td><input class="form-control form-control-sm" type="text" name="fullname" value="{{ user['fullname'] }}"
-                       required></td>
+                       required data-testid="fullname-input"></td>
         </tr>
         <tr>
             <td>{% trans %}Password{% endtrans %}</td>
             <td>
                 <div class="input-group">
                     <input class="form-control form-control-sm" type="password" id="password" name="password"
-                           {% if (not perm_passwd_edit_others and (edit_own_perm and user['uid'] != session_user_id) or use_ldap_checked) %}disabled{% endif %}>
+                           {% if (not perm_passwd_edit_others and (edit_own_perm and user['uid'] != session_user_id) or use_ldap_checked) %}disabled{% endif %} data-testid="password-input">
                     <button class="btn btn-sm btn-outline-secondary" type="button" onclick="showPassword('password', 'eye')"><i class="bi bi-eye-fill" id="eye"></i></button>
                 </div>
             </td>
@@ -36,15 +36,15 @@
         <tr>
             <td>{% trans %}Email address{% endtrans %}</td>
             <td><input class="form-control form-control-sm" type="text" name="email" value="{{ user['email'] }}"
-                       required>
-                <div class="invalid-feedback">{% trans %}Provide email{% endtrans %}</div>
+                       required data-testid="email-input">
+                <div class="invalid-feedback" data-testid="email-error">{% trans %}Provide email{% endtrans %}</div>
             </td>
         </tr>
         {% if edit_templ_perm %}
         <tr>
             <td>{% trans %}Permission template{% endtrans %}</td>
             <td>
-                <select class="form-select form-select-sm" name="perm_templ">
+                <select class="form-select form-select-sm" name="perm_templ" data-testid="template-select">
                     {% for template in permission_templates %}
                     {% if template['id'] == user['tpl_id'] %}
                     <option value="{{ template['id'] }}" selected>{{ template['name'] }}</option>
@@ -58,24 +58,24 @@
         </tr>
         <tr>
             <td>{% trans %}Description{% endtrans %}</td>
-            <td><textarea class="form-control form-control-sm" rows="4" cols="30" name="description">{{ user['descr'] }}</textarea>
+            <td><textarea class="form-control form-control-sm" rows="4" cols="30" name="description" data-testid="description-textarea">{{ user['descr'] }}</textarea>
             </td>
         </tr>
         <tr>
             <td>{% trans %}Enabled{% endtrans %}</td>
-            <td><input class="form-check-input" type="checkbox" name="active" value="1" {{ check }}></td>
+            <td><input class="form-check-input" type="checkbox" name="active" value="1" {{ check }} data-testid="active-checkbox"></td>
         </tr>
         {% if ldap_use %}
         <tr>
             <td>{% trans %}LDAP Authentication{% endtrans %}</td>
             <td><input class="form-check-input" id="ldap" type="checkbox" name="use_ldap" value="1"
-                       onclick="disablePasswordField()" {{ use_ldap_checked }}></td>
+                       onclick="disablePasswordField()" {{ use_ldap_checked }} data-testid="ldap-checkbox"></td>
         </tr>
         {% endif %}
         <tr>
             <td>&nbsp;</td>
-            <td><input class="btn btn-primary btn-sm" type="submit" name="commit" value="{% trans %}Update{% endtrans %}">
-                <input class="btn btn-secondary btn-sm" type="reset" name="reset" value="{% trans %}Reset{% endtrans %}">
+            <td><input class="btn btn-primary btn-sm" type="submit" name="commit" value="{% trans %}Update{% endtrans %}" data-testid="update-user-button">
+                <input class="btn btn-secondary btn-sm" type="reset" name="reset" value="{% trans %}Reset{% endtrans %}" data-testid="reset-user-button">
             </td>
         </tr>
     </table>
@@ -87,7 +87,7 @@
     {% trans %}The description for this template is{% endtrans %}: "{{ user['tpl_descr'] }}".<br>
     {% endif %}
     {% trans %}Based on this template, this user has the following permissions{% endtrans %}:
-    <ul>
+    <ul data-testid="user-permissions-list">
         {% for item in user_permissions %}
         {% set descr = item['descr'] %}
         <li>{{ descr|trans }} ({{ item['name'] }})</li>
