--- a/templates/header.html
+++ b/templates/header.html
@@ -12,111 +12,111 @@
 </head>
 <body>
 
-<header class="mb-4">
+<header class="mb-4" data-testid="site-header">
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <a class="py-4 d-flex align-items-center my-2 my-lg-0 me-lg-auto text-decoration-none"
-               href="index.php">
+               href="index.php" data-testid="home-link">
                 {% if custom_header %}
                 {% include ('custom/header.html') %}
                 {% else %}
-                <img class="me-2" src="assets/logo.png" height="32">
-                <span class="fs-4">{{ iface_title }}</span>
+                <img class="me-2" src="assets/logo.png" height="32" data-testid="logo-image">
+                <span class="fs-4" data-testid="site-title">{{ iface_title }}</span>
                 {% endif %}
             </a>
-            <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
+            <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small" data-testid="main-navigation">
                 {% if user_logged_in %}
                 {% if perm_search %}
-                <li class="p-1">
-                    <a href="index.php?page=search" class="nav-link text-secondary"><i class="bi bi-search"></i></a>
-                    <a href="index.php?page=search" class="text-secondary text-decoration-none">{% trans %}Search{% endtrans %}</a>
+                <li class="p-1" data-testid="nav-search">
+                    <a href="index.php?page=search" class="nav-link text-secondary" data-testid="nav-search-icon"><i class="bi bi-search"></i></a>
+                    <a href="index.php?page=search" class="text-secondary text-decoration-none" data-testid="nav-search-link">{% trans %}Search{% endtrans %}</a>
                 </li>
                 {% endif %}
                 {% if perm_view_zone_own or perm_view_zone_other or perm_zone_master_add or perm_zone_slave_add %}
-                <li class="p-1">
-                    <a href="index.php?page=list_zones" class="nav-link text-secondary"><i class="bi bi-diagram-3"></i></a>
+                <li class="p-1" data-testid="nav-zones">
+                    <a href="index.php?page=list_zones" class="nav-link text-secondary" data-testid="nav-zones-icon"><i class="bi bi-diagram-3"></i></a>
                     <a class="text-secondary text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
                        href="#"
-                       role="button">{% trans %}Zones{% endtrans %}</a>
-                    <ul class="dropdown-menu">
+                       role="button" data-testid="nav-zones-dropdown">{% trans %}Zones{% endtrans %}</a>
+                    <ul class="dropdown-menu" data-testid="nav-zones-menu">
                         {% if perm_view_zone_own or perm_view_zone_other %}
-                        <li><a class="dropdown-item" href="index.php?page=list_zones">{% trans %}List zones{% endtrans %}</a></li>
+                        <li><a class="dropdown-item" href="index.php?page=list_zones" data-testid="nav-list-zones">{% trans %}List zones{% endtrans %}</a></li>
                         {% endif %}
                         {% if perm_zone_master_add %}
                         <li><a class="dropdown-item"
-                               href="index.php?page=add_zone_master">{% trans %}Add master zone{% endtrans %}</a></li>
+                               href="index.php?page=add_zone_master" data-testid="nav-add-master-zone">{% trans %}Add master zone{% endtrans %}</a></li>
                         {% endif %}
                         {% if perm_zone_slave_add %}
                         <li><a class="dropdown-item"
-                               href="index.php?page=add_zone_slave">{% trans %}Add slave zone{% endtrans %}</a></li>
+                               href="index.php?page=add_zone_slave" data-testid="nav-add-slave-zone">{% trans %}Add slave zone{% endtrans %}</a></li>
                         {% endif %}
                         {% if perm_zone_master_add %}
                         <li><a class="dropdown-item"
-                               href="index.php?page=bulk_registration">{% trans %}Bulk registration{% endtrans %}</a>
+                               href="index.php?page=bulk_registration" data-testid="nav-bulk-registration">{% trans %}Bulk registration{% endtrans %}</a>
                         </li>
                         {% endif %}
                         {% if perm_is_godlike and dblog_use == true %}
                         <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item" href="index.php?page=list_log_zones">{% trans %}Zone logs{% endtrans %}</a></li>
+                        <li><a class="dropdown-item" href="index.php?page=list_log_zones" data-testid="nav-zone-logs">{% trans %}Zone logs{% endtrans %}</a></li>
                         {% endif %}
                     </ul>
                 </li>
                 {% endif %}
-                <li class="p-1">
-                    <a href="index.php?page=users" class="nav-link text-secondary"><i class="bi bi-people"></i></a>
+                <li class="p-1" data-testid="nav-users">
+                    <a href="index.php?page=users" class="nav-link text-secondary" data-testid="nav-users-icon"><i class="bi bi-people"></i></a>
                     <a class="text-secondary text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
                        href="#"
-                       role="button">{% trans %}Users{% endtrans %}</a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="index.php?page=users">{% trans %}User administration{% endtrans %}</a></li>
+                       role="button" data-testid="nav-users-dropdown">{% trans %}Users{% endtrans %}</a>
+                    <ul class="dropdown-menu" data-testid="nav-users-menu">
+                        <li><a class="dropdown-item" href="index.php?page=users" data-testid="nav-user-admin">{% trans %}User administration{% endtrans %}</a></li>
                         {% if perm_add_new %}
-                        <li><a class="dropdown-item" href="index.php?page=add_user">{% trans %}Add user{% endtrans %}</a></li>
+                        <li><a class="dropdown-item" href="index.php?page=add_user" data-testid="nav-add-user">{% trans %}Add user{% endtrans %}</a></li>
                         {% endif %}
                         {% if perm_templ_perm_edit %}
                         <li>
                             <hr class="dropdown-divider">
                         </li>
                         <li><a class="dropdown-item"
-                               href="index.php?page=list_perm_templ">{% trans %}List permission templates{% endtrans %}</a></li>
+                               href="index.php?page=list_perm_templ" data-testid="nav-list-perm-templates">{% trans %}List permission templates{% endtrans %}</a></li>
                         <li><a class="dropdown-item"
-                               href="index.php?page=add_perm_templ">{% trans %}Add permission template{% endtrans %}</a></li>
+                               href="index.php?page=add_perm_templ" data-testid="nav-add-perm-template">{% trans %}Add permission template{% endtrans %}</a></li>
                         {% endif %}
                         {% if perm_is_godlike and dblog_use == true %}
                         <li>
                             <hr class="dropdown-divider">
                         </li>
                         <li><a class="dropdown-item"
-                               href="index.php?page=list_log_users">{% trans %}User logs{% endtrans %}</a></li>
+                               href="index.php?page=list_log_users" data-testid="nav-user-logs">{% trans %}User logs{% endtrans %}</a></li>
                         {% endif %}
                     </ul>
                 </li>
                 {% if perm_zone_master_add %}
-                <li class="p-1">
-                    <a href="index.php?page=list_zone_templ" class="nav-link text-secondary text-center"><i
+                <li class="p-1" data-testid="nav-templates">
+                    <a href="index.php?page=list_zone_templ" class="nav-link text-secondary text-center" data-testid="nav-templates-icon"><i
                             class="bi bi-files"></i></a>
                     <a class="text-secondary text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
                        href="#"
-                       role="button">{% trans %}Templates{% endtrans %}</a>
-                    <ul class="dropdown-menu">
+                       role="button" data-testid="nav-templates-dropdown">{% trans %}Templates{% endtrans %}</a>
+                    <ul class="dropdown-menu" data-testid="nav-templates-menu">
                         <li><a class="dropdown-item"
-                               href="index.php?page=list_zone_templ">{% trans %}List zone templates{% endtrans %}</a></li>
+                               href="index.php?page=list_zone_templ" data-testid="nav-list-zone-templates">{% trans %}List zone templates{% endtrans %}</a></li>
                         <li><a class="dropdown-item"
-                               href="index.php?page=add_zone_templ">{% trans %}Add zone template{% endtrans %}</a></li>
+                               href="index.php?page=add_zone_templ" data-testid="nav-add-zone-template">{% trans %}Add zone template{% endtrans %}</a></li>
                     </ul>
                 </li>
                 {% endif %}
-                <li class="p-1">
-                    <a href="#" class="nav-link text-secondary"><i class="bi bi-person-circle"></i></a>
+                <li class="p-1" data-testid="nav-account">
+                    <a href="#" class="nav-link text-secondary" data-testid="nav-account-icon"><i class="bi bi-person-circle"></i></a>
                     <a class="text-secondary text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
                        href="#"
-                       role="button">{% trans %}Account{% endtrans %}</a>
-                    <ul class="dropdown-menu">
+                       role="button" data-testid="nav-account-dropdown">{% trans %}Account{% endtrans %}</a>
+                    <ul class="dropdown-menu" data-testid="nav-account-menu">
                         <li><a class="dropdown-item"
-                               href="index.php?page=change_password">{% trans %}Change password{% endtrans %}</a></li>
+                               href="index.php?page=change_password" data-testid="nav-change-password">{% trans %}Change password{% endtrans %}</a></li>
                         <li><a class="dropdown-item"
-                               href="index.php?page=logout">{% trans %}Logout{% endtrans %}</a></li>
+                               href="index.php?page=logout" data-testid="nav-logout">{% trans %}Logout{% endtrans %}</a></li>
                     </ul>
                 </li>
                 {% endif %}
