--- a/templates/list_log_users.html
+++ b/templates/list_log_users.html
@@ -1,4 +1,4 @@
-<nav aria-label="breadcrumb">
+<nav aria-label="breadcrumb" data-testid="breadcrumb-nav">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="index.php">{% trans %}Home{% endtrans %}</a></li>
         <li class="breadcrumb-item"><a href="index.php?page=users">{% trans %}Users{% endtrans %}</a></li>
@@ -6,20 +6,20 @@
     </ol>
 </nav>
 
-<h5 class="mb-3">{% trans %}User logs{% endtrans %}</h5>
+<h5 class="mb-3" data-testid="user-logs-heading">{% trans %}User logs{% endtrans %}</h5>
 
-<form method="GET">
+<form method="GET" data-testid="search-form">
     <input type="hidden" name="page" value="list_log_users">
     <div class="row pb-3">
         <div class="col-sm-4">
             <div class="input-group">
                 <input name="name" id="name" type="text" class="form-control form-control-sm"
                        placeholder="{% trans %}Search logs by user{% endtrans %}"
-                       {% if name %}value="{{ name }}"{% endif %}>
-                <button for="name" type="submit" class="btn btn-primary btn-sm">
+                       {% if name %}value="{{ name }}"{% endif %} data-testid="search-input">
+                <button for="name" type="submit" class="btn btn-primary btn-sm" data-testid="search-button">
                     <i class="bi bi-search"></i> {% trans %}Search{% endtrans %}
                 </button>
-                <a href="index.php?page=list_log_users" class="btn btn-secondary btn-sm" role="button">
+                <a href="index.php?page=list_log_users" class="btn btn-secondary btn-sm" role="button" data-testid="clear-button">
                     <i class="bi bi-eraser"></i> {% trans %}Clear{% endtrans %}
                 </a>
             </div>
@@ -27,11 +27,11 @@
     </div>
 </form>
 
-<div class="text-secondary">{% trans %}Total number of logs:{% endtrans %} {{ number_of_logs }}</div><br>
+<div class="text-secondary" data-testid="logs-count">{% trans %}Total number of logs:{% endtrans %} {{ number_of_logs }}</div><br>
 
 {% if data %}
 {{ pagination | raw }}
-<table class="table table-striped table-hover table-sm">
+<table class="table table-striped table-hover table-sm" data-testid="logs-table">
     <thead>
     <tr>
         {% if iface_edit_show_id %}
@@ -43,17 +43,17 @@
     </thead>
     <tbody>
     {% for row in data %}
-    <tr>
+    <tr data-testid="log-row-{{ row['id'] }}">
         {% if iface_edit_show_id %}
-        <td>{{ row['id'] }}</td>
+        <td data-testid="log-id-{{ row['id'] }}">{{ row['id'] }}</td>
         {% endif %}
-        <td>{{ row['event'] }}</td>
-        <td>{{ row['created_at'] }}</td>
+        <td data-testid="log-event-{{ row['id'] }}">{{ row['event'] }}</td>
+        <td data-testid="log-date-{{ row['id'] }}">{{ row['created_at'] }}</td>
     </tr>
     {% endfor %}
     </tbody>
 </table>
 {{ pagination | raw }}
 {% else %}
-{% trans %}No logs found{% endtrans %}
+<div data-testid="no-logs-message">{% trans %}No logs found{% endtrans %}</div>
 {% endif %}
