--- a/templates/list_zones.html
+++ b/templates/list_zones.html
@@ -1,21 +1,21 @@
-<nav aria-label="breadcrumb">
+<nav aria-label="breadcrumb" data-testid="breadcrumb-nav">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="index.php">{% trans %}Home{% endtrans %}</a></li>
         <li class="breadcrumb-item" aria-current="page">{% trans %}Zones{% endtrans %}</li>
     </ol>
 </nav>
 
-<h5 class="mb-3">{% trans %}List zones{% endtrans %}</h5>
+<h5 class="mb-3" data-testid="zones-heading">{% trans %}List zones{% endtrans %}</h5>
 
 <div class="d-flex justify-content-between align-items-center mb-3">
-    <div class="text-secondary">
+    <div class="text-secondary" data-testid="zones-count">
         {% trans %}Total number of zones:{% endtrans %} {{ count_zones_all_letterstart }} / {{ count_zones_view }}
     </div>
     <div>
         <form method="get" action="index.php" class="d-inline-flex align-items-center">
             <input type="hidden" name="page" value="list_zones">
             <label for="rows_per_page" class="form-label me-2 mb-0 text-nowrap">{% trans %}Rows per page:{% endtrans %}</label>
-            <select name="rows_per_page" id="rows_per_page" class="form-select form-select-sm" onchange="this.form.submit()">
+            <select name="rows_per_page" id="rows_per_page" class="form-select form-select-sm" onchange="this.form.submit()" data-testid="rows-per-page-select">
                 <option value="10"{% if current_rows_per_page == 10 %} selected{% endif %}>10</option>
                 <option value="20"{% if current_rows_per_page == 20 %} selected{% endif %}>20</option>
                 <option value="50"{% if current_rows_per_page == 50 %} selected{% endif %}>50</option>
@@ -31,16 +31,16 @@
 </div>
 {% endif %}
 
-<form method="post" action="index.php?page=delete_domains">
+<form method="post" action="index.php?page=delete_domains" data-testid="zones-form">
     <input type="hidden" name="_token" value="{{ csrf_token }}">
-    <table class="table table-striped table-hover table-sm">
+    <table class="table table-striped table-hover table-sm" data-testid="zones-table">
         {% if count_zones_view > iface_rowamount and count_zones_all_letterstart == "0" or count_zones_view == 0 %}
-        <tr><td>{% trans %}There are no zones to show in this listing.{% endtrans %}</td></tr>
+        <tr><td data-testid="no-zones-message">{% trans %}There are no zones to show in this listing.{% endtrans %}</td></tr>
         {% else %}
         <thead>
         <tr>
             <th>
-                <input type="checkbox" class="form-check-input" id="select_zones" onClick="toggleZoneCheckboxes()"/>
+                <input type="checkbox" class="form-check-input" id="select_zones" onClick="toggleZoneCheckboxes()" data-testid="select-all-zones"/>
             </th>
             <th>
                 <a href="index.php?page=list_zones&zone_sort_by=name&zone_sort_by_direction={{ zone_sort_by == 'name' and zone_sort_direction == 'ASC' ? 'DESC' : 'ASC' }}">
@@ -92,17 +92,17 @@
         {% set user_is_zone_owner = false %}
         {% endif %}
 
-        <tr>
+        <tr data-testid="zone-row-{{ zone['id'] }}">
             <td>
                 {% if count_zones_edit > 0 and (perm_edit == "all" or (perm_edit == "own" and user_is_zone_owner)) %}
-                <input class="form-check-input" type="checkbox" name="zone_id[]" value="{{ zone['id'] }}">
+                <input class="form-check-input" type="checkbox" name="zone_id[]" value="{{ zone['id'] }}" data-testid="zone-checkbox-{{ zone['id'] }}">
                 {% endif %}
             </td>
-            <td><span data-bs-toggle="tooltip" data-bs-placement="bottom" title="{{ zone['comment'] }}">
+            <td data-testid="zone-name-{{ zone['id'] }}"><span data-bs-toggle="tooltip" data-bs-placement="bottom" title="{{ zone['comment'] }}">
                 {{ zone["utf8_name"] }}
                 </span></td>
-            <td>{{ zone["type"] | lower }}</td>
-            <td>{{ zone["count_records"] }}</td>
+            <td data-testid="zone-type-{{ zone['id'] }}">{{ zone["type"] | lower }}</td>
+            <td data-testid="zone-records-{{ zone['id'] }}">{{ zone["count_records"] }}</td>
 
             <td>
                 {% for owner in zone['owners'] %}
@@ -149,16 +149,16 @@
 
     {% if perm_edit == "all" or perm_edit == "own" %}
     {% if count_zones_view != 0 %}
-    <input type="submit" name="commit" value="{% trans %}Delete zone(s){% endtrans %}" class="btn btn-primary btn-sm">
+    <input type="submit" name="commit" value="{% trans %}Delete zone(s){% endtrans %}" class="btn btn-primary btn-sm" data-testid="delete-zones-button">
     {% endif %}
     {% endif %}
 
     {% if perm_zone_master_add %}
     <input class="btn btn-secondary btn-sm" type="button" name="add_master"
-           onclick="location.href = 'index.php?page=add_zone_master'" value="{% trans %}Add master zone{% endtrans %}">
+           onclick="location.href = 'index.php?page=add_zone_master'" value="{% trans %}Add master zone{% endtrans %}" data-testid="add-master-zone-button">
     {% endif %}
     {% if perm_zone_slave_add %}
     <input class="btn btn-secondary btn-sm" type="button" name="add_slave"
-           onclick="location.href = 'index.php?page=add_zone_slave'" value="{% trans %}Add slave zone{% endtrans %}">
+           onclick="location.href = 'index.php?page=add_zone_slave'" value="{% trans %}Add slave zone{% endtrans %}" data-testid="add-slave-zone-button">
     {% endif %}
 </form>
